--- a/PipQt/PipQt.uplugin
+++ b/PipQt/PipQt.uplugin
@@ -2,12 +2,12 @@
 	"FileVersion": 3,
 	"Version": 1,
 	"VersionName": "0.1",
-	"FriendlyName": "My Plugin",
-	"Description": "A template for your Unreal Python plugin",
+	"FriendlyName": "PipQt",
+	"Description": "a UI to install Python pip packages",
 	"Category": "tool",
 	"CreatedBy": "Hannes",
 	"CreatedByURL": "",
-	"DocsURL": "",
+	"DocsURL": "https://github.com/hannesdelbeke/pip-qt-unreal",
 	"MarketplaceURL": "",
 	"SupportURL": "",
 	"CanContainContent": true,
